# django-api-admin

./: .gitignore  MANIFEST.in  Pipfile  README.md  manage.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
api_admin/: asgi.py  settings.py  urls.py  wsgi.py
custom_django_api_admin/: admin.py  apps.py  models.py  tests.py  views.py
custom_django_api_admin/migrations/: 0001_initial.py
django_api_admin/: __init__.py  actions.py  admin.py  apps.py  changelist.py  checks.py  decorators.py  exceptions.py  field_attributes.py  filters.py  hooks.py  models.py  openapi.py  options.py  pagination.py  permissions.py  routers.py  serializer_field_attributes.py  serializers.py  sites.py  test_views.py  tests.py  utils.py  views.py
django_api_admin/admins/: base_admin.py  inline_admin.py  model_admin.py
django_api_admin/constants/: vars.py
django_api_admin/declarations/: classes.py  functions.py
django_api_admin/migrations/: 0001_initial.py
django_api_admin/tests/: test_admin.py  test_authentication.py  test_inlines.py  test_site.py
django_api_admin/utils/: _get_non_gfk_field.py  diff_helper.py  flatten.py  force_login.py  get_content_type_for_model.py  get_deleted_objects.py  get_field_attributes.py  get_fields_from_path.py  get_form_config.py  get_form_fields.py  get_inline_by_field_name.py  get_inlines.py  get_model_from_relation.py  get_related_name.py  label_for_field.py  lookup_field.py  lookup_spawns_duplicates.py  model_format_dict.py  model_ngettext.py  (+8 more)
test_django_api_admin/: actions.py  admin.py  apps.py  models.py  serializers.py  views.py
(+54 files in other folders)
